--- a/roles/13_configure_repo/defaults/main.yml
+++ b/roles/13_configure_repo/defaults/main.yml
@@ -1,3 +1,3 @@
 # Role 13_configure_repo default variables (override in group_vars/all.yml or host_vars)
-cleanup_repositories: true  # Remove all existing repos before configuration when true
-install_additional_repos: true  # Configure repos by OS (Ubuntu/Debian/Oracle Linux) when true
+cleanup_repositories: false  # Remove all existing repos before configuration when true
+install_additional_repos: false  # Configure repos by OS (Ubuntu/Debian/Oracle Linux) when true
